<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/Backlayout"
	android:background="@color/white"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
<ScrollView
	android:id="@+id/MainScrollView"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
<LinearLayout
	android:id="@+id/MainLayout"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content">
    <ImageView 
    	android:id="@+id/Title" 
    	android:background="@drawable/title" 
    	android:layout_width="300px" 
    	android:layout_height="50px" 
    	android:layout_marginTop="5px"
    	android:layout_gravity="center"/>
    <LinearLayout
    	android:id="@+id/MylocationTitleLayout"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
		<Button
	    	android:id="@+id/MylocationTitle"
	    	android:nextFocusDown="@+id/MyAddress"
		   	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content"
	    	android:layout_marginLeft="20px" 
	    	android:layout_marginRight="20px" 
	    	android:layout_marginTop="5px"
	    	android:text="@string/myLocationTitle"
	    	android:textSize="15sp"
	    	android:textColor="@color/black"
	    	android:background="@drawable/save_button_d"/>
    </LinearLayout>
    <LinearLayout
    	android:id="@+id/MyAddressLayout"
        android:baselineAlignedChildIndex="2"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
   		android:layout_marginLeft="30px" 
		android:layout_marginRight="20px">
	    <TextView 
    		android:id="@+id/MyAddressTag" 
    		android:layout_width="wrap_content" 
    		android:layout_height="wrap_content"
    		android:text="@string/addressTag" 
    		android:textColor="@color/black"
    		android:textSize="15sp"/>
		<HorizontalScrollView
			android:id="@+id/MyAddressScrollView"
			android:layout_width="10px"
			android:layout_height="23px"
			android:focusableInTouchMode="true">
			<TextView 
		 		android:id="@+id/MyAddress" 
    			android:singleLine="true"
    			android:layout_width="fill_parent"
    			android:layout_height="wrap_content" 
    			android:layout_marginRight="20px" 
    			android:text="" 
    			android:textColor="@color/black"
    			android:textSize="15sp"/>
    	</HorizontalScrollView>
	</LinearLayout>
    <LinearLayout
    	android:id="@+id/MyLatitudeLayout" 
        android:baselineAlignedChildIndex="2"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    	<TextView 
    		android:id="@+id/MyLatitudeTag"
    		android:layout_width="wrap_content" 
    		android:layout_height="wrap_content"
    		android:layout_marginLeft="30px" 
    		android:text="@string/latitudeTag" 
    		android:textColor="@color/black"
    		android:textSize="15sp"/>
    	<TextView 
    		android:id="@+id/MyLatitude"
    		android:singleLine="true" 
    		android:layout_width="wrap_content" 
    		android:layout_height="wrap_content"
    		android:layout_marginRight="20px" 
    		android:text="" 
    		android:textColor="@color/black"
    		android:textSize="15sp"/>
    </LinearLayout>
    <LinearLayout
     	android:id="@+id/MyLongitudeLayout" 
        android:baselineAlignedChildIndex="2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
	    <TextView 
    		android:id="@+id/MyLongitudeTag" 
    		android:layout_width="wrap_content" 
    		android:layout_height="wrap_content"
    		android:layout_marginLeft="30px" 
    		android:text="@string/longitudeTag" 
    		android:textColor="@color/black"
    		android:textSize="15sp"/>
    	<TextView 
    		android:id="@+id/MyLongitude"
    		android:singleLine="true" 
    		android:layout_width="wrap_content" 
    		android:layout_height="wrap_content"
    		android:text="" 
    		android:textColor="@color/black"
    		android:textSize="15sp"/>
    </LinearLayout>
    <LinearLayout
    	android:id="@+id/DestinationTitleLayout"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
		<Button
	    	android:id="@+id/DestinationTitle" 
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content"
	    	android:layout_marginTop="5px" 
	    	android:layout_marginLeft="20px" 
	    	android:layout_marginRight="20px" 
	    	android:text="@string/destinationTitle"
	    	android:textColor="@color/black"
	    	android:textSize="15sp"
	    	android:background="@drawable/save_button_d"/>
    </LinearLayout>
    <LinearLayout
    	android:id="@+id/AddressLayout" 
        android:baselineAlignedChildIndex="2"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
	    <RelativeLayout
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content">
		    <TextView 
		    	android:id="@+id/Priority" 
		 	   	android:layout_width="wrap_content" 
		    	android:layout_height="wrap_content"
	    		android:layout_marginLeft="30px"
		    	android:text="@string/priority"
		   		android:textColor="@color/red"
		   		android:textSize="13sp"/>
		    <TextView 
		    	android:id="@+id/AddressTag" 
		 	   	android:layout_width="wrap_content" 
		    	android:layout_height="wrap_content"
	    		android:layout_marginLeft="30px"
		    	android:layout_below="@+id/Priority" 
		    	android:text="@string/address"
		   		android:textColor="@color/black"
		   		android:textSize="13sp"/>
	    </RelativeLayout>
	    <EditText 
		   	android:id="@+id/Address" 
			android:maxLength="256"
 			android:layout_width="fill_parent" 
    		android:layout_height="40px"
			android:layout_marginLeft="5px" 
			android:layout_marginRight="20px"
			android:singleLine="true" 
   			android:text="" 
			android:textSize="15sp"/>
	</LinearLayout>
    <LinearLayout
       	android:id="@+id/InsertLayout"
       	android:orientation="horizontal"
       	android:layout_width="fill_parent"
       	android:layout_height="wrap_content"
        android:layout_marginRight="20px">
    	<LinearLayout
       		android:id="@+id/LttLngLayout"
       		android:orientation="vertical"
       		android:layout_width="wrap_content"
       		android:layout_height="wrap_content">
	    	<LinearLayout
    	    	android:baselineAlignedChildIndex="2"
        		android:id="@+id/LatitudeLayout"
        		android:orientation="horizontal"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content">
    			<TextView 
	    			android:id="@+id/LatitudeTag"
	    			android:layout_width="wrap_content" 
	    			android:layout_height="wrap_content"
	    			android:layout_marginLeft="30px"
	    			android:text="@string/latitude" 
	   				android:textColor="@color/black"
	   				android:textSize="13sp"/> 
	    		<EditText 
	    			android:id="@+id/Latitude" 
	    			android:numeric="integer|signed|decimal" 
	    			android:singleLine="true"    			
					android:maxLength="18"
	    			android:layout_width="170px" 
		    		android:layout_height="40px"
	    			android:layout_marginLeft="5px" 
	    			android:layout_marginRight="5px" 
	    			android:text=""
		    		android:textSize="15sp"/>
			</LinearLayout>
	    	<LinearLayout
		    	android:id="@+id/LongitudeLayout" 
	        	android:baselineAlignedChildIndex="2"
	        	android:orientation="horizontal"
	        	android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:layout_below="@+id/LatitudeLayout">
		    	<TextView 
		    		android:id="@+id/LongitudeTag" 
		 		   	android:layout_width="wrap_content" 
		    		android:layout_height="wrap_content"
		    		android:layout_marginLeft="30px" 
		   			android:textColor="@color/black"
		   			android:textSize="13sp"
		    		android:text="@string/longitude"/>
		    	<EditText 
		    		android:id="@+id/Longitude" 
					android:maxLength="18"
	   	 			android:layout_width="170px" 
		    		android:layout_height="40px"
	    			android:layout_marginLeft="5px" 
	    			android:layout_marginRight="5px"
	    			android:nextFocusDown="@+id/Start" 
	    			android:numeric="integer|signed|decimal" 
	    			android:singleLine="true"
	    			android:text="" 
		   			android:textSize="15sp"/>
	    	</LinearLayout>
	   	</LinearLayout>
    	<LinearLayout
       		android:id="@+id/RfrMapLayout"
       		android:background="@android:drawable/btn_default"
       		android:gravity="center"
			android:focusable="true"
			android:layout_width="65px"
        	android:layout_height="75px">
	    	<TextView
				android:id="@+id/RfrMapStr"
				android:layout_width="wrap_content"
		   		android:layout_height="wrap_content" 
	   			android:text="@string/rfrMap1"
	   			android:textColor="@color/black"
		   		android:textSize="13sp"/>
    	</LinearLayout>
   	</LinearLayout>
    <TextView 
    	android:id="@+id/ResultTitle" 
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content"
    	android:layout_marginTop="5px"
    	android:layout_marginLeft="20px" 
    	android:text="@string/resultTitle" 
   		android:textColor="@color/black"
   		android:textSize="15sp"/>
   	<LinearLayout
   		android:id="@+id/ResutLayout"
   		android:orientation="horizontal"
       	android:layout_height="wrap_content"
       	android:layout_width="wrap_content">
   	<LinearLayout
   		android:id="@+id/ResutStrLayout"
   		android:orientation="vertical"
       	android:layout_height="wrap_content"
       	android:layout_width="wrap_content">
	    <LinearLayout
    		android:id="@+id/ResutRow1" 
        	android:baselineAlignedChildIndex="2"
        	android:orientation="horizontal"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content">
	    	<TextView 
	    		android:id="@+id/DistanceTag"
	    		android:layout_width="wrap_content" 
	    		android:layout_height="wrap_content" 
	    		android:layout_marginLeft="30px" 
	    		android:text="@string/distance" 
	   			android:textColor="@color/black"
	   			android:textSize="15sp"/>
	    	<TextView 
	    		android:id="@+id/Distance"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content" 
	    		android:text="" 
	   			android:textColor="@color/black"
	   			android:textSize="15sp"/>
		</LinearLayout>
    	<LinearLayout
       		android:id="@+id/ResutRow2" 
        	android:baselineAlignedChildIndex="3"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal"
        	android:layout_below="@+id/ResutRow1">
	    	<TextView 
	    		android:id="@+id/DirectionTag"
	    		android:layout_width="wrap_content" 
	    		android:layout_height="wrap_content" 
	    		android:layout_marginLeft="30px" 
	    		android:text="@string/direction" 
	   			android:textColor="@color/black"
	   			android:textSize="15sp"/>
	    	<TextView 
    			android:id="@+id/Direction" 
    			android:layout_height="wrap_content"
    			android:layout_width="wrap_content" 
    			android:text=""
   				android:textColor="@color/black"
   				android:textSize="15sp"/>
		</LinearLayout>
		<Button 
			android:id="@+id/Start" 
    		android:layout_width="150px"
    		android:layout_height="50px"
    		android:layout_marginTop="12px"
    		android:layout_marginLeft="20px"
	    	android:layout_below="@+id/ResutRow2"
    	 	android:text="@string/start"
    		android:textSize="13sp"/>
	</LinearLayout>
   	<LinearLayout
    	android:id="@+id/ArrowMargin"
    	android:layout_width="30px"
    	android:layout_height="wrap_content">
	</LinearLayout>
   	<LinearLayout
    	android:id="@+id/DirectionArrow"
    	android:gravity="center"
    	android:layout_width="100px"
    	android:layout_height="100px">
	</LinearLayout>
	</LinearLayout>
</LinearLayout>
</ScrollView>
</LinearLayout>