<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<com.google.android.maps.MapView
    xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/MapView"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:enabled="true"
	android:clickable="true"
	android:apiKey="0fv56EM5EPfWJu6PaJPqpnbpnatng5otNLmQ0zA"/>
<LinearLayout
	android:id="@+id/SeachLayout"
	android:background="@color/translucentBlack"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:visibility="visible"
	android:padding="10px">
	<RelativeLayout
      	android:layout_height="fill_parent"
       	android:layout_width="fill_parent">
		<Button
			android:text="@string/serch"
			android:id="@+id/MapSearchButton"
			android:layout_width="70px"
			android:layout_height="wrap_content"
			android:layout_below="@+id/SeachTitle"
			android:layout_alignParentRight="true"/>
		<EditText
			android:id="@+id/MapSearchEdit"
			android:singleLine="true"
			android:maxLength="256"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_toLeftOf="@+id/MapSearchButton"
			android:text=""/>
	</RelativeLayout>
</LinearLayout>
<LinearLayout
	android:id="@+id/ConfirmationLayout"
	android:background="@color/translucentBlack"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:visibility="invisible"
	android:padding="10px">
	<LinearLayout
    	android:id="@+id/MapRow1" 
        android:baselineAlignedChildIndex="2"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
		<TextView
			android:id="@+id/MapAddressTag"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/addressTag"
			android:textColor="@color/white"/>
		<TextView
			android:id="@+id/MapAddress"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text=""
			android:textColor="@color/white"/>
	</LinearLayout>
   	<RelativeLayout
       	android:layout_height="fill_parent"
       	android:layout_width="fill_parent">
		<Button
			android:id="@+id/OkButton"
			android:layout_width="70px"
			android:layout_height="wrap_content"
			android:text="@string/mapOk"
			android:layout_toLeftOf="@+id/MapRow2"
			android:layout_alignParentRight="true"/>
	    <LinearLayout
    		android:id="@+id/MapRow2" 
        	android:baselineAlignedChildIndex="2"
        	android:orientation="horizontal"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content">
			<TextView
				android:id="@+id/MapLatitudeTag"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/latitudeTag"
				android:textColor="@color/white"/>
			<TextView
				android:id="@+id/MapLatitude"
				android:layout_width="200px"
				android:layout_height="wrap_content"
				android:text=""
				android:textColor="@color/white"/>
		</LinearLayout>
	    <LinearLayout
    		android:id="@+id/MapRow3" 
        	android:baselineAlignedChildIndex="2"
        	android:orientation="horizontal"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_below="@+id/MapRow2">
			<TextView
				android:id="@+id/MapLongitudeTag"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/longitudeTag"
				android:textColor="@color/white"/>
			<TextView
				android:id="@+id/MapLongitude"
				android:layout_width="200px"
				android:layout_height="wrap_content"
				android:text=""
				android:textColor="@color/white"/>
		</LinearLayout>
	</RelativeLayout>
</LinearLayout>
<ZoomControls
	android:id="@+id/ZoomControls"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_gravity="bottom|right"/>
</FrameLayout>