<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/Backlayout"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
<ScrollView
	android:id="@+id/FullScrollView"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
<LinearLayout
	android:id="@+id/FullLayout"
	android:background="@color/white"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
    <ImageView 
    	android:id="@+id/FullTitle" 
    	android:background="@drawable/title" 
    	android:layout_width="300px" 
    	android:layout_height="50px" 
    	android:layout_marginTop="5px"
    	android:layout_gravity="center"/>
    <TextView 
    	android:id="@+id/FullResultTitle" 
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content"
    	android:layout_marginTop="5px"
    	android:layout_marginLeft="20px" 
    	android:text="@string/resultTitle" 
   		android:textColor="@color/black"
   		android:textSize="25sp"/>
	    <LinearLayout
    		android:id="@+id/FullResutRow1" 
        	android:baselineAlignedChildIndex="2"
        	android:orientation="horizontal"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content">
	    	<TextView 
	    		android:id="@+id/FullDistanceTag"
	    		android:layout_width="wrap_content" 
	    		android:layout_height="wrap_content" 
	    		android:layout_marginLeft="30px" 
	    		android:text="@string/distance" 
	   			android:textColor="@color/black"
	   			android:textSize="25sp"/>
	    	<TextView 
	    		android:id="@+id/FullDistance"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content" 
	    		android:text="" 
	   			android:textColor="@color/black"
	   			android:textSize="25sp"/>
		</LinearLayout>
    	<LinearLayout
       		android:id="@+id/FullResutRow2" 
        	android:baselineAlignedChildIndex="3"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal"
        	android:layout_below="@+id/ResutRow1">
	    	<TextView 
	    		android:id="@+id/FullDirectionTag"
	    		android:layout_width="wrap_content" 
	    		android:layout_height="wrap_content" 
	    		android:layout_marginLeft="30px" 
	    		android:text="@string/direction" 
	   			android:textColor="@color/black"
	   			android:textSize="25sp"/>
	    	<TextView 
    			android:id="@+id/FullDirection" 
    			android:layout_height="wrap_content"
    			android:layout_width="wrap_content" 
    			android:text=""
   				android:textColor="@color/black"
   				android:textSize="25sp"/>
		</LinearLayout>
		<ImageView 
	    	android:id="@+id/FullDirectionArrow" 
	    	android:layout_width="250px"
	    	android:layout_height="250px"
	    	android:layout_marginTop="10px"
	    	android:layout_marginBottom="8px"
	    	android:scaleType="center"
	    	android:layout_gravity="center_vertical|center_horizontal"/>
</LinearLayout>
</ScrollView>
</LinearLayout>